# devcontainer-CPP-SDL2-template

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile
src/: def.h  main.cpp
src/gui/: glfw.cpp  glfw.h  sdl2.cpp  sdl2.h
